--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==3.7.1
 numpy==1.23.5
 pandas==1.5.3
-Requests==2.31.0
+requests==2.31.0
 scikit_learn==1.2.2
 seaborn==0.13.0
 st_star_rating==0.0.3
