--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+folium==0.15.1
+matplotlib==3.7.2
 matplotlib==3.7.1
-numpy==1.23.5
+numpy==1.24.3
+pandas==2.0.3
 pandas==1.5.3
-requests==2.31.0  
-scikit_learn==1.2.2  
+plotly==5.9.0
+Requests==2.31.0
+scikit_learn==1.1.3
+scikit_learn==1.3.0
+scikit_learn==1.3.2
 seaborn==0.13.0
-st_star_rating==0.0.3  
-streamlit_lottie==0.0.3  
+streamlit==1.29.0
+streamlit_extras==0.3.6
+streamlit_folium==0.17.4
+streamlit_lottie==0.0.5
