--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==1.24.3
 pandas==2.0.3
 pandas==1.5.3
 plotly==5.9.0
-Requests==2.31.0
+requests==2.31.0
 scikit_learn==1.1.3
 scikit_learn==1.3.0
 scikit_learn==1.3.2
