--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy==1.24.3
 pandas==2.0.3
 pandas==1.5.3
 plotly==5.9.0
-Requests==2.31.0
+requests==2.31.0
 scikit_learn==1.3.2
 seaborn==0.13.0
 streamlit==1.29.0
@@ -12,3 +12,4 @@ streamlit_extras==0.3.6
 streamlit_folium==0.17.4
 streamlit_lottie==0.0.5
 st-star-rating==0.0.3 
+dateTime==5.4
